--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,10 @@
-@import 'node_modules/locomotive-scroll/dist/locomotive-scroll';
+@import "node_modules/locomotive-scroll/dist/locomotive-scroll";
 
-body{
+body {
   margin: 0px;
   background-color: black;
 }
 
+/* * {
+  border: 1px solid red;
+} */
